@@ -1,16 +1,10 @@
-import org.grails.gradle.plugin.doc.PublishGuideTask
-
-apply plugin: 'org.grails.grails-doc'
-
 configurations.register('groovydocConfiguration')
 configurations.register('guideConfiguration')
 
 dependencies {
-
     add('groovydocConfiguration', localGroovy(), {
         because 'groovydoc needs to run with the same version as Gradle'
     })
-
     add('guideConfiguration', libs.grails.docs)
     add('guideConfiguration', libs.groovy.templates)
     add('guideConfiguration', libs.slf4j.nop) // Get rid of logs during guide generation
@@ -25,8 +19,43 @@ tasks.withType(Groovydoc).configureEach {
     groovyClasspath = configurations.groovydocConfiguration
 }
 
-tasks.withType(PublishGuideTask).configureEach {
-    classpath = configurations.guideConfiguration
-    javadocDir = null
-    propertiesFile = layout.projectDirectory.file('src/docs/guide.properties').asFile
+asciidoctor {
+    baseDir = file('src/docs')
+    sourceDir = file('src/docs')
+    outputDir = file('build/docs/manual')
+    sources {
+        include 'index.adoc'
+    }
+    jvm {
+        jvmArgs += [
+            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+        ]
+    }
+    attributes = [
+        copyright            : 'Apache License, Version 2.0',
+        docinfo1             : 'true',
+        doctype              : 'book',
+        encoding             : 'utf-8',
+        icons                : 'font',
+        id                   : "$rootProject.name:$projectVersion",
+        idprefix             : '',
+        idseparator          : '-',
+        lang                 : 'en',
+        linkattrs            : true,
+        numbered             : '',
+        producer             : 'Asciidoctor',
+        revnumber            : projectVersion,
+        setanchors           : true,
+        'source-highlighter' : 'prettify',
+        toc                  : 'left',
+        toc2                 : '',
+        toclevels            : '2',
+        projectVersion       : projectVersion
+    ]
+}
+
+tasks.register('docs') {
+    group = 'documentation'
+    dependsOn 'asciidoctor', 'groovydoc'
 }
